--- a/2_Single-Zone-Processing.ipynb
+++ b/2_Single-Zone-Processing.ipynb
@@ -438,9 +438,9 @@
    ],
    "source": [
     "# read DBFs to get zones\n",
-    "zoneSetDir = 'E:\\\\GitHub\\\\StreetLight-Recreation-and-Transit\\\\Zone-Sets\\\\redownloaded-from-streetlight\\\\'\n",
-    "analysisSetDir = \"E:\\\\GitHub\\\\StreetLight-Recreation-and-Transit\\output\\\\\"\n",
-    "indivZonesDatDir = \"E:\\\\GitHub\\\\StreetLight-Recreation-and-Transit\\output\\\\results-by-indiv-zones\\\\\"\n",
+    "zoneSetDir = os.path.join(os.getcwd(), r'Zone-Sets\\redownloaded-from-streetlight')\n",
+    "analysisSetDir = os.path.join(os.getcwd(), r'output')\n",
+    "indivZonesDataDir = os.path.join(os.getcwd(), r'output\\results-by-indiv-zones')\n",
     "\n",
     "dfZoneSets = dfAnalysisSets[['zone_set_name']].drop_duplicates()\n",
     "\n",
@@ -487,8 +487,8 @@
     "        _dfZoneDataAsO = _dfZoneSetResults[_dfZoneSetResults['OName']==rowZ['name']]\n",
     "        _dfZoneDataAsD = _dfZoneSetResults[_dfZoneSetResults['DName']==rowZ['name']]\n",
     "\n",
-    "        _dfZoneDataAsO.to_csv(indivZonesDatDir + rowZS['zone_set_name'] + '__' + rowZ['name'] + '_asOrig.csv',index=False)\n",
-    "        _dfZoneDataAsD.to_csv(indivZonesDatDir + rowZS['zone_set_name'] + '__' + rowZ['name'] + '_asDest.csv',index=False)"
+    "        _dfZoneDataAsO.to_csv(indivZonesDataDir + rowZS['zone_set_name'] + '__' + rowZ['name'] + '_asOrig.csv',index=False)\n",
+    "        _dfZoneDataAsD.to_csv(indivZonesDataDir + rowZS['zone_set_name'] + '__' + rowZ['name'] + '_asDest.csv',index=False)"
    ]
   }
  ],
