Add county to county and station areas

--- a/2_Single-Zone-Processing.ipynb
+++ b/2_Single-Zone-Processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -42,57 +42,64 @@
        "      <th>mode_name</th>\n",
        "      <th>mode_description</th>\n",
        "      <th>zone_set_name</th>\n",
+       "      <th>analysis_type</th>\n",
        "      <th>analysis_set_name</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>1204</th>\n",
        "      <td>2019_01</td>\n",
        "      <td>[{'start_date': '01/01/2019', 'end_date': '01/...</td>\n",
        "      <td>TRU</td>\n",
        "      <td>Truck</td>\n",
-       "      <td>StreetLight_TAZ_RecreationZones_CacheCo</td>\n",
-       "      <td>Recreation_Zones_CacheCo_2019_01_TRU</td>\n",
+       "      <td>Summit Wasatch Rec</td>\n",
+       "      <td>Pre-Set OD</td>\n",
+       "      <td>Recreation_Zones_Summit-Wasatch_2019_01_TRU</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>1205</th>\n",
        "      <td>2019_01</td>\n",
        "      <td>[{'start_date': '01/01/2019', 'end_date': '01/...</td>\n",
        "      <td>BIC</td>\n",
        "      <td>Bicycle</td>\n",
-       "      <td>StreetLight_TAZ_RecreationZones_CacheCo</td>\n",
-       "      <td>Recreation_Zones_CacheCo_2019_01_BIC</td>\n",
+       "      <td>Summit Wasatch Rec</td>\n",
+       "      <td>Pre-Set OD</td>\n",
+       "      <td>Recreation_Zones_Summit-Wasatch_2019_01_BIC</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>1206</th>\n",
        "      <td>2019_01</td>\n",
        "      <td>[{'start_date': '01/01/2019', 'end_date': '01/...</td>\n",
        "      <td>PED</td>\n",
        "      <td>Pedestrian</td>\n",
-       "      <td>StreetLight_TAZ_RecreationZones_CacheCo</td>\n",
-       "      <td>Recreation_Zones_CacheCo_2019_01_PED</td>\n",
+       "      <td>Summit Wasatch Rec</td>\n",
+       "      <td>Pre-Set OD</td>\n",
+       "      <td>Recreation_Zones_Summit-Wasatch_2019_01_PED</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>1207</th>\n",
        "      <td>2019_01</td>\n",
        "      <td>[{'start_date': '01/01/2019', 'end_date': '01/...</td>\n",
        "      <td>ALL</td>\n",
        "      <td>All_Vehicles</td>\n",
-       "      <td>StreetLight_TAZ_RecreationZones_CacheCo</td>\n",
-       "      <td>Recreation_Zones_CacheCo_2019_01_ALL</td>\n",
+       "      <td>Summit Wasatch Rec</td>\n",
+       "      <td>Pre-Set OD</td>\n",
+       "      <td>Recreation_Zones_Summit-Wasatch_2019_01_ALL</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>1208</th>\n",
        "      <td>2019_02</td>\n",
        "      <td>[{'start_date': '02/01/2019', 'end_date': '02/...</td>\n",
        "      <td>TRU</td>\n",
        "      <td>Truck</td>\n",
-       "      <td>StreetLight_TAZ_RecreationZones_CacheCo</td>\n",
-       "      <td>Recreation_Zones_CacheCo_2019_02_TRU</td>\n",
+       "      <td>Summit Wasatch Rec</td>\n",
+       "      <td>Pre-Set OD</td>\n",
+       "      <td>Recreation_Zones_Summit-Wasatch_2019_02_TRU</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -107,6 +114,7 @@
        "      <td>ALL</td>\n",
        "      <td>All_Vehicles</td>\n",
        "      <td>Summit Wasatch Rec</td>\n",
+       "      <td>Pre-Set OD</td>\n",
        "      <td>Recreation_Zones_Summit-Wasatch_2022_03_ALL</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -116,6 +124,7 @@
        "      <td>TRU</td>\n",
        "      <td>Truck</td>\n",
        "      <td>Summit Wasatch Rec</td>\n",
+       "      <td>Pre-Set OD</td>\n",
        "      <td>Recreation_Zones_Summit-Wasatch_2022_04_TRU</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -125,6 +134,7 @@
        "      <td>BIC</td>\n",
        "      <td>Bicycle</td>\n",
        "      <td>Summit Wasatch Rec</td>\n",
+       "      <td>Pre-Set OD</td>\n",
        "      <td>Recreation_Zones_Summit-Wasatch_2022_04_BIC</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -134,6 +144,7 @@
        "      <td>PED</td>\n",
        "      <td>Pedestrian</td>\n",
        "      <td>Summit Wasatch Rec</td>\n",
+       "      <td>Pre-Set OD</td>\n",
        "      <td>Recreation_Zones_Summit-Wasatch_2022_04_PED</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -143,20 +154,21 @@
        "      <td>ALL</td>\n",
        "      <td>All_Vehicles</td>\n",
        "      <td>Summit Wasatch Rec</td>\n",
+       "      <td>Pre-Set OD</td>\n",
        "      <td>Recreation_Zones_Summit-Wasatch_2022_04_ALL</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1376 rows × 6 columns</p>\n",
+       "<p>172 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "     date_range_name                                        data_ranges  \\\n",
-       "0            2019_01  [{'start_date': '01/01/2019', 'end_date': '01/...   \n",
-       "1            2019_01  [{'start_date': '01/01/2019', 'end_date': '01/...   \n",
-       "2            2019_01  [{'start_date': '01/01/2019', 'end_date': '01/...   \n",
-       "3            2019_01  [{'start_date': '01/01/2019', 'end_date': '01/...   \n",
-       "4            2019_02  [{'start_date': '02/01/2019', 'end_date': '02/...   \n",
+       "1204         2019_01  [{'start_date': '01/01/2019', 'end_date': '01/...   \n",
+       "1205         2019_01  [{'start_date': '01/01/2019', 'end_date': '01/...   \n",
+       "1206         2019_01  [{'start_date': '01/01/2019', 'end_date': '01/...   \n",
+       "1207         2019_01  [{'start_date': '01/01/2019', 'end_date': '01/...   \n",
+       "1208         2019_02  [{'start_date': '02/01/2019', 'end_date': '02/...   \n",
        "...              ...                                                ...   \n",
        "1371         2022_03  [{'start_date': '03/01/2022', 'end_date': '03/...   \n",
        "1372         2022_04  [{'start_date': '04/01/2022', 'end_date': '04/...   \n",
@@ -164,25 +176,25 @@
        "1374         2022_04  [{'start_date': '04/01/2022', 'end_date': '04/...   \n",
        "1375         2022_04  [{'start_date': '04/01/2022', 'end_date': '04/...   \n",
        "\n",
-       "     mode_name mode_description                            zone_set_name  \\\n",
-       "0          TRU            Truck  StreetLight_TAZ_RecreationZones_CacheCo   \n",
-       "1          BIC          Bicycle  StreetLight_TAZ_RecreationZones_CacheCo   \n",
-       "2          PED       Pedestrian  StreetLight_TAZ_RecreationZones_CacheCo   \n",
-       "3          ALL     All_Vehicles  StreetLight_TAZ_RecreationZones_CacheCo   \n",
-       "4          TRU            Truck  StreetLight_TAZ_RecreationZones_CacheCo   \n",
-       "...        ...              ...                                      ...   \n",
-       "1371       ALL     All_Vehicles                       Summit Wasatch Rec   \n",
-       "1372       TRU            Truck                       Summit Wasatch Rec   \n",
-       "1373       BIC          Bicycle                       Summit Wasatch Rec   \n",
-       "1374       PED       Pedestrian                       Summit Wasatch Rec   \n",
-       "1375       ALL     All_Vehicles                       Summit Wasatch Rec   \n",
+       "     mode_name mode_description       zone_set_name analysis_type  \\\n",
+       "1204       TRU            Truck  Summit Wasatch Rec    Pre-Set OD   \n",
+       "1205       BIC          Bicycle  Summit Wasatch Rec    Pre-Set OD   \n",
+       "1206       PED       Pedestrian  Summit Wasatch Rec    Pre-Set OD   \n",
+       "1207       ALL     All_Vehicles  Summit Wasatch Rec    Pre-Set OD   \n",
+       "1208       TRU            Truck  Summit Wasatch Rec    Pre-Set OD   \n",
+       "...        ...              ...                 ...           ...   \n",
+       "1371       ALL     All_Vehicles  Summit Wasatch Rec    Pre-Set OD   \n",
+       "1372       TRU            Truck  Summit Wasatch Rec    Pre-Set OD   \n",
+       "1373       BIC          Bicycle  Summit Wasatch Rec    Pre-Set OD   \n",
+       "1374       PED       Pedestrian  Summit Wasatch Rec    Pre-Set OD   \n",
+       "1375       ALL     All_Vehicles  Summit Wasatch Rec    Pre-Set OD   \n",
        "\n",
        "                                analysis_set_name  \n",
-       "0            Recreation_Zones_CacheCo_2019_01_TRU  \n",
-       "1            Recreation_Zones_CacheCo_2019_01_BIC  \n",
-       "2            Recreation_Zones_CacheCo_2019_01_PED  \n",
-       "3            Recreation_Zones_CacheCo_2019_01_ALL  \n",
-       "4            Recreation_Zones_CacheCo_2019_02_TRU  \n",
+       "1204  Recreation_Zones_Summit-Wasatch_2019_01_TRU  \n",
+       "1205  Recreation_Zones_Summit-Wasatch_2019_01_BIC  \n",
+       "1206  Recreation_Zones_Summit-Wasatch_2019_01_PED  \n",
+       "1207  Recreation_Zones_Summit-Wasatch_2019_01_ALL  \n",
+       "1208  Recreation_Zones_Summit-Wasatch_2019_02_TRU  \n",
        "...                                           ...  \n",
        "1371  Recreation_Zones_Summit-Wasatch_2022_03_ALL  \n",
        "1372  Recreation_Zones_Summit-Wasatch_2022_04_TRU  \n",
@@ -190,229 +202,29 @@
        "1374  Recreation_Zones_Summit-Wasatch_2022_04_PED  \n",
        "1375  Recreation_Zones_Summit-Wasatch_2022_04_ALL  \n",
        "\n",
-       "[1376 rows x 6 columns]"
+       "[172 rows x 7 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "dfAnalysisSets = pd.read_csv('output\\\\_analysis_sets.csv')\n",
+    "dfAnalysisSets = dfAnalysisSets[dfAnalysisSets['zone_set_name'].isin(['Summit Wasatch Rec'])]\n",
     "dfAnalysisSets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "StreetLight_TAZ_RecreationZones_CacheCo\n",
-      "50880_2\n",
-      "50888_2\n",
-      "StreetLight_TAZ_RecreationZones_UDOT\n",
-      "1052_2\n",
-      "1055_1\n",
-      "15267_1\n",
-      "15267_2\n",
-      "15267_3\n",
-      "17145_2\n",
-      "19073_2\n",
-      "19073_3\n",
-      "19073_4\n",
-      "21345_0\n",
-      "21350_0\n",
-      "21359_1\n",
-      "21359_2\n",
-      "21359_3\n",
-      "37023_2\n",
-      "37023_3\n",
-      "37023_4\n",
-      "37163_1\n",
-      "37163_2\n",
-      "47133_1\n",
-      "47133_2\n",
-      "47133_3\n",
-      "47133_4\n",
-      "51016_1\n",
-      "51016_2\n",
-      "51016_3\n",
-      "51250_1\n",
-      "51250_2\n",
-      "55091_1\n",
-      "55091_2\n",
-      "57058_0\n",
-      "57072_1\n",
-      "57072_2\n",
-      "9003_1\n",
-      "9011_1\n",
-      "StreetLight_TAZ_RecreationZones_WashingtonCo\n",
-      "530008_1\n",
-      "530458_2\n",
-      "530591_1\n",
-      "530597_1\n",
-      "530597_2\n",
-      "530695_1\n",
-      "530695_2\n",
-      "530695_3\n",
-      "530695_4\n",
-      "530699_1\n",
-      "530699_2\n",
-      "530701_1\n",
-      "530701_2\n",
-      "530701_3\n",
-      "530701_4\n",
-      "530702_1\n",
-      "530702_2\n",
-      "530788_1\n",
-      "530804_1\n",
-      "530810_1\n",
-      "530818_1\n",
-      "530823_1\n",
-      "530823_2\n",
-      "530823_3\n",
-      "530823_4\n",
-      "530823_5\n",
-      "StreetLight_TAZ_RecreationZones_WFRC\n",
-      "110118_2\n",
-      "110134_2\n",
-      "110164_2\n",
-      "110189_2\n",
-      "110198_2\n",
-      "110224_2\n",
-      "110248_2\n",
-      "110314_2\n",
-      "350068_2\n",
-      "350068_3\n",
-      "350069_2\n",
-      "350069_3\n",
-      "350078_2\n",
-      "350197_2\n",
-      "350197_3\n",
-      "350197_5\n",
-      "350264_2\n",
-      "350599_2\n",
-      "350626_2\n",
-      "350790_2\n",
-      "351002_2\n",
-      "351002_3\n",
-      "351012_2\n",
-      "351031_2\n",
-      "351211_2\n",
-      "351232_2\n",
-      "351232_3\n",
-      "351243_2\n",
-      "351243_3\n",
-      "351243_4\n",
-      "351243_5\n",
-      "351247_2\n",
-      "351250_2\n",
-      "351251_2\n",
-      "351251_3\n",
-      "351251_4\n",
-      "351285_1\n",
-      "351285_2\n",
-      "351285_3\n",
-      "351285_4\n",
-      "351285_5\n",
-      "351287_1\n",
-      "351287_2\n",
-      "351287_3\n",
-      "351287_4\n",
-      "351288_1\n",
-      "351288_2\n",
-      "351288_3\n",
-      "351289_1\n",
-      "351289_2\n",
-      "351290_1\n",
-      "351290_2\n",
-      "351290_3\n",
-      "351291_0\n",
-      "351292_1\n",
-      "351292_2\n",
-      "351293_1\n",
-      "351293_2\n",
-      "351293_3\n",
-      "351293_4\n",
-      "351307_2\n",
-      "570090_2\n",
-      "570122_2\n",
-      "570122_3\n",
-      "570161_2\n",
-      "570165_2\n",
-      "570179_2\n",
-      "570185_2\n",
-      "570210_2\n",
-      "570250_2\n",
-      "570268_2\n",
-      "570285_2\n",
-      "570292_2\n",
-      "StreetLight_TAZ_RecreationZones_UtahCo\n",
-      "490245_2\n",
-      "490245_3\n",
-      "490284_2\n",
-      "490443_2\n",
-      "490454_2\n",
-      "490514_2\n",
-      "490535_2\n",
-      "490537_2\n",
-      "490569_2\n",
-      "490573_1\n",
-      "490573_2\n",
-      "490727_2\n",
-      "490729_2\n",
-      "490733_2\n",
-      "490733_3\n",
-      "490810_2\n",
-      "491031_2\n",
-      "491286_0\n",
-      "491287_0\n",
-      "491288_0\n",
-      "491289_0\n",
-      "491292_0\n",
-      "491306_0\n",
-      "491307_1\n",
-      "491321_0\n",
-      "51276_0\n",
-      "StreetLight_TAZ_RecreationZones_GardenCity_Moab\n",
-      "19004_0\n",
-      "33003_0\n",
-      "33010_0\n",
-      "33018_0\n",
-      "StreetLight_SuWs_SecondaryHomes\n",
-      "CabinSummit1\n",
-      "CabinSummit2\n",
-      "CabinSummit3\n",
-      "CabinWas1\n",
-      "CabinWas2\n",
-      "CondoSummit1\n",
-      "CondoSummit2\n",
-      "CondoSummit3\n",
-      "CondoSummit4\n",
-      "CondoWas1\n",
-      "HotelSummit1\n",
-      "HotelSummit2\n",
-      "HotelSummit3\n",
-      "HotelSummit4\n",
-      "HotelSummit5\n",
-      "HotelSummit6\n",
-      "HotelSummit7\n",
-      "HotelWas1\n",
-      "HotelWas2\n",
-      "HotelWas3\n",
-      "SecHomesSummit1\n",
-      "SecHomesSummit2\n",
-      "SecHomesSummit3\n",
-      "SecHomesWas2\n",
-      "SecHomesWas3\n",
-      "SecHomesWas4\n",
-      "SecHomesWas5\n",
-      "SecHomeWas1\n",
       "Summit-Wasatch-Rec\n",
       "PCMR_Base\n",
       "Canyons_Park2\n",
@@ -448,7 +260,7 @@
     "\n",
     "for indexZS, rowZS in dfZoneSets.iterrows():\n",
     "    zsName = rowZS['zone_set_name'].replace(' ','-')\n",
-    "    dbfName = (zoneSetDir + \"UDOT---PPU_\" + zsName + '_ZoneSet\\\\zone_set_' + zsName.replace('-','_') + '.dbf').replace('_Moab.dbf','.dbf')\n",
+    "    dbfName = (zoneSetDir + \"\\\\UDOT---PPU_\" + zsName + '_ZoneSet\\\\zone_set_' + zsName.replace('-','_') + '.dbf').replace('_Moab.dbf','.dbf')\n",
     "    print(zsName)\n",
     "\n",
     "    _dfZones = pd.DataFrame(DBF(dbfName, load=True))\n",
